tests/gabc-dump/should-fail/unclosed-hepisema-adjustment.gabc
name: unclosed horizontal episema adjustment;
%%
(c4) f(f[oh{]) (::)
